unpackaged/main/default/objects/Shift/fields/Territory_LocalEndTime__c.field-meta.xml
<CustomField>
    <fullName>Territory_LocalEndTime__c</fullName>
    <label>Territory Local End Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>