unpackaged/main/default/objects/Shift/fields/Territory_LocalStartTime__c.field-meta.xml
<CustomField>
    <fullName>Territory_LocalStartTime__c</fullName>
    <label>Territory Local Start Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>