unpackaged/main/default/objects/Shift/fields/Territory_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Territory_Timezone__c</fullName>
    <formula>TEXT(ServiceResource.Primary_Service_Territory__r.OperatingHours.TimeZone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Timezone</label>
    <type>Text</type>
</CustomField>