unpackaged/main/default/objects/Shift/listViews/One_USer.listView-meta.xml
<ListView>
    <fullName>One_USer</fullName>
    <columns>CreatedBy</columns>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>ServiceResource</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceResource</field>
        <operation>contains</operation>
        <value>gordan</value>
    </filters>
    <label>One User</label>
</ListView>