unpackaged/main/default/objects/Shift/listViews/X291000_292000.listView-meta.xml
<ListView>
    <fullName>X291000_292000</fullName>
    <columns>Name</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>ServiceResource</columns>
    <columns>ServiceTerritory</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RecordsetFilterCriteria</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartTime</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>291000 + 292000</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>